@@ -3,13 +3,6 @@
 #include <ncurses.h>
 #include "list_window.h"
 
-/* top window headers */
-#define TOP_HEADER_PREFIX "Music Player Client - "
-#define TOP_HEADER_PLAY   TOP_HEADER_PREFIX "Playlist"
-#define TOP_HEADER_FILE   TOP_HEADER_PREFIX "Browse"
-#define TOP_HEADER_HELP   TOP_HEADER_PREFIX "Help    "
-#define TOP_HEADER_SEARCH TOP_HEADER_PREFIX "Search  "
-
 /* minumum window size */
 #define SCREEN_MIN_COLS 14
 #define SCREEN_MIN_ROWS  5
