@@ -1,3 +1,6 @@
+2004-06-06 Kalle Wallin <kaw@linux.se>
+	* i18n: ncmpc is now bilingual (sv)
+
 2004-06-05 Kalle Wallin <kaw@linux.se>
 	* Added initial i18n support
 	* Changed directory layout to suit future use of gettext 
